メンバー紹介ホバーアニメーション追加

--- a/src/_pug/index.pug
+++ b/src/_pug/index.pug
@@ -75,24 +75,64 @@ block content
         ul.cfx
           li
             img(src="https://placehold.jp/400x400.png" alt="みわみわ")
+            .mask
+              .caption
+                h3 Leader
+                h4 - Presenter -
+                p 小串 泰斗
           li
             img(src="https://placehold.jp/400x400.png" alt="みわみわ")
+            .mask
+              .caption
+                h3 Sub Leader
+                h4 - Engineer -
+                p 関 大智
           li
             img(src="https://placehold.jp/400x400.png" alt="みわみわ")
+            .mask
+              .caption
+                h3 Member
+                h4 - Designer -
+                p 清水 勇太
           li
             img(src="https://placehold.jp/400x400.png" alt="みわみわ")
+            .mask
+              .caption
+                h3 Member
+                h4 - Engineer -
+                p 三輪 俊太郎
         .page-num -5-
       div.page.page-seventh
         .green-line
         ul.cfx
           li
             img(src="https://placehold.jp/400x400.png" alt="みわみわ")
+            .mask
+              .caption
+                h3 Member
+                h4 - sssss -
+                p 青木 龍也
           li
             img(src="https://placehold.jp/400x400.png" alt="みわみわ")
+            .mask
+              .caption
+                h3 Member
+                h4 - sssss -
+                p メンバー
           li
             img(src="https://placehold.jp/400x400.png" alt="みわみわ")
+            .mask
+              .caption
+                h3 Member
+                h4 - sssss -
+                p メンバー
           li
             img(src="https://placehold.jp/400x400.png" alt="みわみわ")
+            .mask
+              .caption
+                h3 Member
+                h4 - sssss -
+                p メンバー
         .page-num -6-
       div.page.page-eighth
         .blue-line
@@ -126,7 +166,7 @@ block content
         .qr-area
           .text-area
             h3 WEB開発学科4年 H424
-            p QRコード読み込みでSPサイトへ
+            p QRコード読み込みで特設SPサイトへ
           .image-area
             img(src="./img/qr.png" alt="QRコード")
         .page-num COPYRIGHT © 2018 H424 ALL RIGHTS RESERVED.
