--- a/css/index.css
+++ b/css/index.css
@@ -408,9 +408,12 @@ strong {
 }
 .page-sixth ul li,
 .page-seventh ul li {
+  position: relative;
   width: 200px;
   height: 200px;
   margin-bottom: 40px;
+  border-radius: 50%;
+  overflow: hidden;
 }
 .page-sixth ul li:nth-child(odd),
 .page-seventh ul li:nth-child(odd) {
@@ -423,6 +426,48 @@ strong {
   border: 2px solid #000;
   border-radius: 50%;
   box-sizing: border-box;
+}
+.page-sixth ul li .mask,
+.page-seventh ul li .mask {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  border-radius: 50%;
+  overflow: hidden;
+  background: rgba(0,0,0,0.4);
+  transition: all 0.6s ease;
+}
+.page-sixth ul li .mask .caption,
+.page-seventh ul li .mask .caption {
+  color: #fff;
+  padding-top: 45px;
+  margin-left: -90px;
+  transition: all 0.6s ease;
+}
+.page-sixth ul li .mask .caption h3,
+.page-seventh ul li .mask .caption h3 {
+  font-size: 24px;
+  margin: 0 0 5px;
+}
+.page-sixth ul li .mask .caption h4,
+.page-seventh ul li .mask .caption h4 {
+  font-size: 14px;
+  margin: 0 0 40px;
+}
+.page-sixth ul li .mask .caption p,
+.page-seventh ul li .mask .caption p {
+  font-size: 18px;
+}
+.page-sixth ul li:hover .mask,
+.page-seventh ul li:hover .mask {
+  opacity: 1;
+}
+.page-sixth ul li:hover .mask .caption,
+.page-seventh ul li:hover .mask .caption {
+  margin-left: 0px;
 }
 .page-seventh ul {
   margin: 60px 0 0;
@@ -480,12 +525,12 @@ strong {
   width: 70%;
 }
 .page-end .qr-area .text-area h3 {
-  font-size: 18px;
-  margin: 15px 0;
+  font-size: 16px;
+  margin: 15px 5px;
 }
 .page-end .qr-area .text-area p {
-  font-size: 12px;
-  margin: 20px 15px;
+  font-size: 11px;
+  margin: 20px 10px;
 }
 .page-end .qr-area .image-area {
   width: 30%;
