--- a/src/_sass/index.styl
+++ b/src/_sass/index.styl
@@ -93,9 +93,12 @@
       sub_h2 green-color
     ul
       li
+        position relative
         width 200px
         height 200px
         margin-bottom 40px
+        border-radius 50%
+        overflow hidden
         &:nth-child(odd)
           margin-left 30px
           margin-right 40px
@@ -104,6 +107,35 @@
           border 2px solid #000
           border-radius 50%
           box-sizing border-box
+        .mask
+          width 100%
+          height 100%
+          position absolute
+          top 0
+          left 0
+          opacity 0
+          border-radius 50%
+          overflow hidden
+          background rgba(0,0,0,0.4)
+          transition all 0.6s ease
+          .caption
+            color #fff
+            padding-top 45px
+            margin-left -90px
+            transition all 0.6s ease
+            h3
+              font-size 24px
+              margin 0 0 5px
+            h4
+              font-size 14px
+              margin 0 0 40px
+            p
+              font-size 18px
+        &:hover
+          .mask
+            opacity 1
+            .caption
+              margin-left 0px
   &-seventh
     ul
       margin 60px 0 0
@@ -147,11 +179,11 @@
         width 70%
         @extend .flL
         h3
-          font-size 18px
-          margin 15px 0
+          font-size 16px
+          margin 15px 5px
         p
-          font-size 12px
-          margin 20px 15px
+          font-size 11px
+          margin 20px 10px
       .image-area
         width 30%
         @extend .flL
