--- a/src/_pug/index.pug
+++ b/src/_pug/index.pug
@@ -27,10 +27,10 @@ block content
             | ・・・ P2 - 4
           li
             span.green メンバー一覧
-            | ・・・ P5 - 6
+            | ・・・ P5 - 8
           li
             span.blue 使用した技術
-            | ・・・ P7 - 8
+            | ・・・ P9 - 10
         .page-num -1-
       div.page.page-third
         .red-line
@@ -72,95 +72,131 @@ block content
       div.page.page-sixth
         .green-line
         h2 - メンバー一覧 -
-        ul.cfx
+        ul
           li
-            img(src="https://placehold.jp/400x400.png" alt="みわみわ")
-            .mask
-              .caption
-                h3 Leader
-                h4 - Presenter -
-                p 小串 泰斗
+            .left
+              img(src="./img/member/ogushi.jpg" alt="小串")
+              .mask
+                .caption
+                  h3 Leader
+                  h4 - Presenter -
+                  p 小串 泰斗
+            .right
+              p.text リーダーとして、みんなをまとめていくことが大変でした。
           li
-            img(src="https://placehold.jp/400x400.png" alt="みわみわ")
-            .mask
-              .caption
-                h3 Sub Leader
-                h4 - Engineer -
-                p 関 大智
-          li
-            img(src="https://placehold.jp/400x400.png" alt="みわみわ")
-            .mask
-              .caption
-                h3 Member
-                h4 - Designer -
-                p 清水 勇太
-          li
-            img(src="https://placehold.jp/400x400.png" alt="みわみわ")
-            .mask
-              .caption
-                h3 Member
-                h4 - Engineer -
-                p 三輪 俊太郎
+            .left
+              img(src="./img/member/seki.jpg" alt="関")
+              .mask
+                .caption
+                  h3 Sub Leader
+                  h4 - Engineer -
+                  p 関 大智
+            .right
+              p.text 初めて使用する技術が多く大変だったが、楽しみながら製作することができた。
         .page-num -5-
       div.page.page-seventh
         .green-line
-        ul.cfx
+        ul
           li
-            img(src="https://placehold.jp/400x400.png" alt="みわみわ")
-            .mask
-              .caption
-                h3 Member
-                h4 - sssss -
-                p 青木 龍也
+            .left
+              img(src="./img/member/shimizu.jpg" alt="清水")
+              .mask
+                .caption
+                  h3 Member
+                  h4 - Designer -
+                  p 清水 勇太
+            .right
+              p.text ああああああ
           li
-            img(src="https://placehold.jp/400x400.png" alt="みわみわ")
-            .mask
-              .caption
-                h3 Member
-                h4 - sssss -
-                p メンバー
-          li
-            img(src="https://placehold.jp/400x400.png" alt="みわみわ")
-            .mask
-              .caption
-                h3 Member
-                h4 - sssss -
-                p メンバー
-          li
-            img(src="https://placehold.jp/400x400.png" alt="みわみわ")
-            .mask
-              .caption
-                h3 Member
-                h4 - sssss -
-                p メンバー
+            .left
+              img(src="./img/member/miwa.jpg" alt="三輪")
+              .mask
+                .caption
+                  h3 Member
+                  h4 - Engineer -
+                  p 三輪 俊太郎
+            .right
+              p.text 今回の未来創造展は初めてのことがたくさんあったので、とても刺激的でした。
         .page-num -6-
+      div.page.page-seventh
+        .green-line
+        ul
+          li
+            .left
+              img(src="./img/member/aoki.jpg" alt="青木")
+              .mask
+                .caption
+                  h3 Member
+                  h4 - Project Members -
+                  p 青木 龍矢
+            .right
+              p.text ああああああ
+          li
+            .left
+              img(src="./img/member/noimage.jpg" alt="メンバー")
+              .mask
+                .caption
+                  h3 Member
+                  h4 - Project Members -
+                  p メンバー
+            .right
+              p.text あああああああ
+        .page-num -7-
+      div.page.page-seventh
+        .green-line
+        ul
+          li
+            .left
+              img(src="./img/member/noimage.jpg" alt="メンバー")
+              .mask
+                .caption
+                  h3 Member
+                  h4 - Project Members -
+                  p メンバー
+            .right
+              p.text ああああああ
+          li
+            .left
+              img(src="./img/member/noimage.jpg" alt="メンバー")
+              .mask
+                .caption
+                  h3 Member
+                  h4 - Project Members -
+                  p メンバー
+            .right
+              p.text ああああああ
+        .page-num -8-
       div.page.page-eighth
         .blue-line
         h2 - 使用した技術 -
         h3
           | ◇
-          span.blue コンパイル言語
+          span.blue 言語
         p ◯ pug
         p ◯ stylus
-        h3
-          | ◇
-          span.blue web-api
-        p ◯ pug
-        p ◯ stylus
-        .page-num -7-
+        p ◯ Node.js
+        p ◯ React.js
+        p ◯ Node.js
+        p ◯ Monaca
+        .page-num -9-
       div.page.page-ninth
         .blue-line
         h3.first
           | ◇
+          span.blue web-api
+        p ◯ open-weather
+        h3
+          | ◇
           span.blue バックエンド
-        p ◯ pug
-        p ◯ stylus
+        p ◯ php
+        p ◯ mysql
         h3
           | ◇
           span.blue プラグイン
-        p ◯ pug
-        p ◯ stylus
-        .page-num -8-
+        p ◯ box2d
+        p ◯ weppack
+        p ◯ jQuery
+        .page-num -10-
       div.page.page-end
         h2 THE END
         .qr-area
