テキスト完成

--- a/src/_pug/index.pug
+++ b/src/_pug/index.pug
@@ -106,7 +106,7 @@ block content
                   h4 - Designer -
                   p 清水 勇太
             .right
-              p.text ああああああ
+              p.text 賞は取れなかったけどいい経験、思い出になった。
           li
             .left
               img(src="./img/member/miwa.jpg" alt="三輪")
@@ -130,7 +130,7 @@ block content
                   h4 - Project Members -
                   p 青木 龍矢
             .right
-              p.text ああああああ
+              p.text 色々楽しかったです。ありがとうございました
           li
             .left
               img(src="./img/member/noimage.jpg" alt="メンバー")
@@ -140,7 +140,7 @@ block content
                   h4 - Project Members -
                   p メンバー
             .right
-              p.text あああああああ
+              p.text 大変でしたが無事終えれてよかったです。
         .page-num -7-
       div.page.page-seventh
         .green-line
@@ -154,7 +154,7 @@ block content
                   h4 - Project Members -
                   p メンバー
             .right
-              p.text ああああああ
+              p.text ブースの机がキレイに仕上がったので、製作は満足できました。
           li
             .left
               img(src="./img/member/noimage.jpg" alt="メンバー")
@@ -164,7 +164,7 @@ block content
                   h4 - Project Members -
                   p メンバー
             .right
-              p.text ああああああ
+              p.text 机を彫るのが大変でした。
         .page-num -8-
       div.page.page-eighth
         .blue-line
